--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading">A LITTLE ABOUT <span class="text-muted">ME.</span></h2>
-        <p class="lead">Welcome to my Home page. My name is Jose, but most people call me Joe. I am a full time student here at CSULB. I am a second year about to go onto my third year after this semester.I came here to get a bachelors degree in computer science. So far I have learned python and some java.With my degree I want to get into the gaming industry. Some of my other interests are pplaying video games and basketball.
+        <p class="lead">Welcome to my Home page. My name is Jose, but most people call me Joe. I am a full time student here at CSULB. I am a second year about to go onto my third year after this semester.I came here to get a bachelors degree in computer science. So far I have learned python and some java.With my degree I want to get into the gaming industry. Some of my other interests are playing video games and basketball.
 
 </p>
       </div>
