--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </p>
       </div>
       <div class="col-md-5">
-        <img src="MY PHOTO.HEIC" alt="Jose Moran" width="400" height="400">
+        <img src="2018-chevrolet-camaro-zl1-1le-001-1561050025.jpeg" alt="Jose Moran" width="400" height="400">
 
       </div>
     </div>
